objects/maps__Folder__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>maps__Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__ParentFolder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Folder</label>
        <referenceTo>maps__Folder__c</referenceTo>
        <relationshipLabel>Maps Folders</relationshipLabel>
        <relationshipName>MapsFolders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__ProfileIds__c</fullName>
        <label>Profile Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__RoleId__c</fullName>
        <label>RoleId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MapsFolders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Maps Folder</label>
    <listViews>
        <fullName>maps__All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>maps__Order__c</columns>
        <columns>maps__ParentFolder__c</columns>
        <columns>maps__ProfileIds__c</columns>
        <columns>maps__RoleId__c</columns>
        <columns>maps__User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Folder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Folders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>